# caps

./: caps.cabal  shell.nix  stack.yaml
.github/workflows/: ci.yml
src/Monad/: Capabilities.hs
src/Monad/Capabilities/: RefImpl.hs
test/: TestExamples.hs
