name:                caps
version:             0
synopsis:            Monadic capabilities with late binding
license:             BSD3
license-file:        LICENSE
author:              Vladislav Zavialov
maintainer:          vlad.z.4096@gmail.com
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Monad.Capabilities
  build-depends:       base >=4.10 && <4.12,
                       transformers,
                       typerep-map >=0.2,
                       template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-warn-unticked-promoted-constructors
                       -fno-warn-partial-type-signatures

test-suite test-examples
  build-depends:       base >=4.10 && <4.11,
                       caps,
                       mtl,
                       tasty,
                       tasty-hunit
  main-is:             TestExamples.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
